--- a/Novo Documento de Texto.html
+++ b/Novo Documento de Texto.html
@@ -3,6 +3,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
+<title>Napoli</title>
+<link rel="icon" href="Fotos/Napoli.png">
 <div class="foto">
 <header>
     <nav>
